security.tf
resource "aws_security_group" "security2" {
  name        = "Test3"
  description = "security group 3"
  vpc_id      = aws_vpc.vpc1.id

  ingress {
    description      = "port 80 "
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "port 443 "
    from_port        =  0
    to_port          =  0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "security3"
  }
}
